--- a/src/lycee/lycee.html
+++ b/src/lycee/lycee.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8">
     <title>Anthologie</title>
     <link href="/reset.css" rel="stylesheet" type="text/css" />
-    <link href="/app.css" rel="stylesheet" type="text/css" />
-    <link href="/app/side/lycee.css" rel="stylesheet" type="text/css" />
+    <link href="/lycee/side/lycee.css" rel="stylesheet" type="text/css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" type="text/javascript"></script>
-    <script src="/app/side/lycee.js" type="text/javascript"></script>
+    <script src="/lycee/side/lycee.js" type="text/javascript"></script>
   </head>
   <body>
     <section id="full">
