--- a/src/lycee/lycee.html
+++ b/src/lycee/lycee.html
@@ -6,11 +6,15 @@
     <link href="/reset.css" rel="stylesheet" type="text/css" />
     <link href="/lycee/side/lycee.css" rel="stylesheet" type="text/css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="/font-awesome-animation.min.css">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" type="text/javascript"></script>
     <script src="/lycee/side/lycee.js" type="text/javascript"></script>
   </head>
   <body>
     <section id="full">
+        <nav id="error"></nav>
+        <nav id="success"></nav>
+        <nav id="waiting"></nav>
         <article id="container">
 
         </article>
