--- a/src/lycee/lycee.html
+++ b/src/lycee/lycee.html
@@ -12,12 +12,10 @@
   </head>
   <body>
     <section id="full">
-        <nav id="error"></nav>
-        <nav id="success"></nav>
-        <nav id="waiting"></nav>
-        <article id="container">
-
-        </article>
+      <nav id="waiting"></nav>
+      <nav id="error"></nav>
+      <nav id="success"></nav>
+      <article id="container"></article>
     </section>
   </body>
 </html>
