--- a/src/lycee/lycee.html
+++ b/src/lycee/lycee.html
@@ -12,9 +12,9 @@
   </head>
   <body>
     <section id="full">
-      <nav id="waiting"></nav>
-      <nav id="error"></nav>
-      <nav id="success"></nav>
+      <nav id="waiting" class="message"></nav>
+      <nav id="error" class="message"></nav>
+      <nav id="success" class="message"></nav>
       <article id="container"></article>
     </section>
   </body>
