--- a/src/lycee/lycee.html
+++ b/src/lycee/lycee.html
@@ -16,6 +16,7 @@
       <nav id="success" class="message"></nav>
       <nav id="error" class="message"></nav>
       <article id="container"></article>
+      <nav id="cta" class="message"></nav>
     </section>
   </body>
 </html>
