--- a/src/lycee/lycee.html
+++ b/src/lycee/lycee.html
@@ -12,11 +12,16 @@
   </head>
   <body>
     <section id="full">
-      <nav id="waiting" class="message"></nav>
-      <nav id="success" class="message"></nav>
-      <nav id="error" class="message"></nav>
-      <article id="container"></article>
-      <nav id="cta" class="message"></nav>
+      <article id="main">
+        <nav id="waiting" class="message"></nav>
+        <nav id="success" class="message"></nav>
+        <nav id="error" class="message"></nav>
+        <article id="container"></article>
+        <nav id="cta" class="message"></nav>
+      </article>
+      <aside id="side">
+
+      </aside>
     </section>
   </body>
 </html>
