send translation aside

--- a/src/lycee/lycee.html
+++ b/src/lycee/lycee.html
@@ -20,7 +20,7 @@
         <nav id="cta" class="message"></nav>
       </article>
       <aside id="side">
-
+        <nav id="ctaSide" class="message"></nav>
       </aside>
     </section>
   </body>
