--- a/src/lycee/lycee.html
+++ b/src/lycee/lycee.html
@@ -20,6 +20,9 @@
         <nav id="cta" class="message"></nav>
       </article>
       <aside id="side">
+        <article id="sideContainer">
+
+        </article>
         <nav id="ctaSide" class="message"></nav>
       </aside>
     </section>
