--- a/src/lycee/lycee.html
+++ b/src/lycee/lycee.html
@@ -20,9 +20,7 @@
         <nav id="cta" class="message"></nav>
       </article>
       <aside id="side">
-        <article id="sideContainer">
-
-        </article>
+        <article id="sideContainer"></article>
         <nav id="ctaSide" class="message"></nav>
       </aside>
     </section>
